# argo-connectors

./: .gitignore  .lvimrc  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README.md  ar-sync.spec  argo-connectors.spec  argo-egi-connectors.spec  coverage.xml  gridftp_vosepath.py  pyproject.toml  setup.py  version.py
cronjobs/: hepspec  metricprofile  poem  topology  topology-egi  topology-gocdb  topology-vo  weights
doc/: egi-connectors.md  sync.md
docker/: Dockerfile  Dockerfile.systemd  chezmoi-config-apply.sh  docker-run-connectors-r9.sh  docker-run-connectors-shared-r9.sh  pypath.sh
etc/: customer.conf  customer.conf.template  global.conf  global.conf.template  poem-connector.conf  poem_name_mapping.cfg  prefilter-egi.conf
etc/ar-sync/: downtime-sync.EGI.Cloudmon.conf  downtime-sync.EGI.Critical.conf  downtime-sync.conf  downtime-sync.py  group_endpoints.avsc  group_groups.avsc  hepspec-sync.EGI.Cloudmon.conf  hepspec-sync.EGI.Critical.conf  hepspec-sync.conf  metric_profiles.avsc  poem-customer.conf  poem-profile.conf  poem-server.conf  poem-sync.conf  poem.conf  poem_profile.conf  poem_sync.conf  prefilter-avro.EGI.Cloudmon.conf  prefilter-avro.EGI.Critical.conf  prefilter-avro.conf  prefilter.conf  sites.avsc  topology-sync.EGI.Cloudmon.conf  topology-sync.EGI.Critical.conf  topology-sync.conf  topology_sync.conf  vo-sync.conf  weight_sites.avsc
etc/argo-egi-connectors/: customer.conf  global.conf  poem-connector.conf  prefilter.conf
etc/cron.daily/: ar-sync
etc/schemas/: group_endpoints-sites.avsc  group_endpoints.avsc  group_groups-services.avsc  group_groups.avsc  metric_data.avsc  metric_profiles.avsc  vo_group_groups.avsc
exec/: downtimes-csv-connector.py  downtimes-gocdb-connector.py  metricprofile-webapi-connector.py  service-types-csv-connector.py  service-types-gocdb-connector.py  service-types-json-connector.py  topology-agora-connector.py  topology-csv-connector.py  topology-gocdb-connector.py  topology-json-connector.py  topology-provider-connector.py  weights-vapor-connector.py
modules/: config.py  exceptions.py  helpers.py  input.py  log.py  output.py  tools.py  utils.py  writers.py
modules/io/: avrowrite.py  (+8 more)
tests/: agora_provider_sample.json  agora_resource_sample.json  customer.conf  global.conf  run-tests.sh  sample-bdii_sepaths.json  sample-downtimes.csv  sample-gocdb_downtimes.xml  sample-private-provider.json  sample-private-resource.json  sample-privresourcefeed_horizontal_services.json  sample-providerfeed_eoscprovider_eudat.json  sample-providerfeed_extras.json  sample-resourcefeed_eoscprovider_eudat.json  sample-resourcefeed_extensions.json  sample-resourcefeed_extras.json  sample-roc_contacts.xml  sample-service_endpoint.xml  sample-service_endpoint_biomed.xml  sample-service_endpoint_eoscprovider.json  sample-service_endpoint_with_contacts.xml  sample-service_group_contacts.xml  sample-service_group_with_contacts.xml  sample-service_group_with_contacts_notification.xml  sample-service_types_gocdb.xml  sample-service_types_webapi.json  sample-site.xml  sample-site_contacts.xml  sample-sites_biomed.xml  sample-sites_with_contacts.xml  sample-topo.csv  sample-topo.json  sample-topofeedpaging.xml  test_asynctasks.py  test_bdiisepath.py  test_config.py  test_contactfeed.py  test_downfeed.py  test_downtimes.py  test_feed.py  (+9 more)
(+37 files in other folders)
