[tool.poetry]
name = "argo-connectors"
version = "2.3.0"
authors = ["Daniel Vrcic <dvrcic@srce.hr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "*"
aiofiles = "*"
requests = "*"
uvloop = "*"
unidecode = "*"
lxml = "*"

[tool.poetry.group.devel]
optional = true

[tool.poetry.group.devel.dependencies]
build = "*"
mock = "*"
